--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,7 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="text_Color">#E30B5D</color>
+    <color name="text_Color">#F90000</color>
+    <color name="text_Color_two">#F90000</color>
+    <color name="background_Color">#FFFFFf</color>
 </resources>
