--- a/app/src/main/res/layout/grid_layout.xml
+++ b/app/src/main/res/layout/grid_layout.xml
@@ -15,7 +15,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_google_play" />
+        app:srcCompat="@drawable/google_play" />
 
     <ImageView
         android:id="@+id/github_image"
@@ -26,7 +26,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/playStore_image"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_github" />
+        app:srcCompat="@drawable/github" />
 
     <ImageView
         android:id="@+id/bitBucket_image"
@@ -37,7 +37,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/github_image"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_bitbucket" />
+        app:srcCompat="@drawable/bitbucket" />
 
     <ImageView
         android:id="@+id/facebook_image"
@@ -48,7 +48,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/bitBucket_image"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_facebook" />
+        app:srcCompat="@drawable/facebook" />
 
     <TextView
         android:id="@+id/playStore_text"
@@ -103,7 +103,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/playStore_text"
-        app:srcCompat="@drawable/ic_twitter" />
+        app:srcCompat="@drawable/twitter" />
 
     <ImageView
         android:id="@+id/instagram_image"
@@ -114,7 +114,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/twitter_image"
         app:layout_constraintTop_toBottomOf="@+id/github_text"
-        app:srcCompat="@drawable/ic_instagram" />
+        app:srcCompat="@drawable/instagram" />
 
     <ImageView
         android:id="@+id/googlePlus"
@@ -125,7 +125,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/instagram_image"
         app:layout_constraintTop_toBottomOf="@+id/bitBucket_text"
-        app:srcCompat="@drawable/ic_google_plus" />
+        app:srcCompat="@drawable/google_plus" />
 
     <ImageView
         android:id="@+id/youTube_image"
@@ -136,7 +136,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/googlePlus"
         app:layout_constraintTop_toBottomOf="@+id/facebook_text"
-        app:srcCompat="@drawable/ic_youtube" />
+        app:srcCompat="@drawable/youtube" />
 
     <TextView
         android:id="@+id/twitter_text"
@@ -191,7 +191,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/twitter_text"
-        app:srcCompat="@drawable/ic_dribbble" />
+        app:srcCompat="@drawable/dribbble" />
 
     <ImageView
         android:id="@+id/linkedIn_image"
@@ -201,7 +201,7 @@
         app:layout_constraintEnd_toStartOf="@+id/mail_image"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/dribbble_image"
-        app:srcCompat="@drawable/ic_linkedin" />
+        app:srcCompat="@drawable/linkedin" />
 
     <ImageView
         android:id="@+id/mail_image"
@@ -211,7 +211,7 @@
         app:layout_constraintEnd_toStartOf="@+id/whatsapp_image"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/linkedIn_image"
-        app:srcCompat="@drawable/ic_email" />
+        app:srcCompat="@drawable/mail" />
 
     <ImageView
         android:id="@+id/whatsapp_image"
@@ -221,7 +221,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/mail_image"
-        app:srcCompat="@drawable/ic_whatsapp" />
+        app:srcCompat="@drawable/whatsapp" />
 
     <TextView
         android:id="@+id/dribbble_text"
@@ -276,7 +276,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dribbble_text"
-        app:srcCompat="@drawable/ic_skype" />
+        app:srcCompat="@drawable/skype" />
 
     <ImageView
         android:id="@+id/google_image"
@@ -287,7 +287,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/skype_image"
         app:layout_constraintTop_toBottomOf="@+id/linkedIn_text"
-        app:srcCompat="@drawable/ic_google" />
+        app:srcCompat="@drawable/google" />
 
     <ImageView
         android:id="@+id/androidBot_image"
@@ -298,7 +298,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/google_image"
         app:layout_constraintTop_toBottomOf="@+id/email_text"
-        app:srcCompat="@drawable/android_bot" />
+        app:srcCompat="@drawable/ic_android" />
 
     <ImageView
         android:id="@+id/web_image"
@@ -309,7 +309,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/androidBot_image"
         app:layout_constraintTop_toBottomOf="@+id/whatsapp_text"
-        app:srcCompat="@drawable/ic_website" />
+        app:srcCompat="@drawable/website" />
 
     <TextView
         android:id="@+id/skype_text"
