--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,15 +76,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tech_used_text" />
 
-    <View
+    <ImageView
         android:id="@+id/view2"
         android:layout_width="0dp"
-        android:layout_height="1dp"
+        android:layout_height="5dp"
         android:layout_marginTop="8dp"
-        android:background="@color/text_Color_two"
+        android:layerType="software"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bio_text" />
+        app:layout_constraintTop_toBottomOf="@+id/bio_text"
+        tools:srcCompat="@drawable/dotted" />
 
     <include
         android:id="@+id/app_layout"
@@ -94,7 +95,9 @@
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bio_text" />
+        app:layout_constraintTop_toBottomOf="@+id/bio_text"
+        app:layout_constraintVertical_bias="0.489" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
