--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="text_Color">#282830</color>
-    <color name="text_Color_two">#F90000</color>
+    <color name="text_Color_two">#000000</color>
     <color name="background_Color">#FFFFFf</color>
+    <color name="pic_background_Color">#FF0000</color>
 </resources>
