--- a/app/src/main/res/layout/grid_layout.xml
+++ b/app/src/main/res/layout/grid_layout.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/pic_background_Color"
+    android:background="@color/background_Color"
     android:layout_height="match_parent">
 
 
@@ -57,9 +57,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/play_store"
-        app:layout_constraintEnd_toStartOf="@+id/github_text"
+        app:layout_constraintEnd_toEndOf="@+id/playStore_image"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/playStore_image"
         app:layout_constraintTop_toBottomOf="@+id/playStore_image" />
 
     <TextView
@@ -69,9 +69,9 @@
         android:layout_height="wrap_content"
         android:text="@string/github"
         app:layout_constraintBottom_toBottomOf="@+id/playStore_text"
-        app:layout_constraintEnd_toStartOf="@+id/bitBucket_text"
+        app:layout_constraintEnd_toEndOf="@+id/github_image"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/playStore_text" />
+        app:layout_constraintStart_toStartOf="@+id/github_image" />
 
     <TextView
         android:id="@+id/bitBucket_text"
@@ -80,9 +80,9 @@
         android:layout_height="wrap_content"
         android:text="@string/bitbucket"
         app:layout_constraintBottom_toBottomOf="@+id/github_text"
-        app:layout_constraintEnd_toStartOf="@+id/facebook_text"
+        app:layout_constraintEnd_toEndOf="@+id/bitBucket_image"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/github_text" />
+        app:layout_constraintStart_toStartOf="@+id/bitBucket_image" />
 
     <TextView
         android:id="@+id/facebook_text"
@@ -91,9 +91,9 @@
         android:layout_height="wrap_content"
         android:text="@string/facebook"
         app:layout_constraintBottom_toBottomOf="@+id/bitBucket_text"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/facebook_image"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/bitBucket_text" />
+        app:layout_constraintStart_toStartOf="@+id/facebook_image" />
 
     <ImageView
         android:id="@+id/twitter_image"
@@ -145,9 +145,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/twitter"
-        app:layout_constraintEnd_toStartOf="@+id/instagram_text"
+        app:layout_constraintEnd_toEndOf="@+id/twitter_image"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/twitter_image"
         app:layout_constraintTop_toBottomOf="@+id/twitter_image" />
 
     <TextView
@@ -157,9 +157,9 @@
         android:layout_height="wrap_content"
         android:text="@string/instagram"
         app:layout_constraintBottom_toBottomOf="@+id/twitter_text"
-        app:layout_constraintEnd_toStartOf="@+id/googlePlus_text"
+        app:layout_constraintEnd_toEndOf="@+id/instagram_image"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/twitter_text" />
+        app:layout_constraintStart_toStartOf="@+id/instagram_image" />
 
     <TextView
         android:id="@+id/googlePlus_text"
@@ -168,9 +168,9 @@
         android:layout_height="wrap_content"
         android:text="@string/google_plus"
         app:layout_constraintBottom_toBottomOf="@+id/instagram_text"
-        app:layout_constraintEnd_toStartOf="@+id/youTube_text"
+        app:layout_constraintEnd_toEndOf="@+id/googlePlus"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/instagram_text" />
+        app:layout_constraintStart_toStartOf="@+id/googlePlus" />
 
     <TextView
         android:id="@+id/youTube_text"
@@ -179,9 +179,9 @@
         android:layout_height="wrap_content"
         android:text="@string/youtube"
         app:layout_constraintBottom_toBottomOf="@+id/googlePlus_text"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/youTube_image"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/googlePlus_text" />
+        app:layout_constraintStart_toStartOf="@+id/youTube_image" />
 
     <ImageView
         android:id="@+id/dribbble_image"
@@ -230,9 +230,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/dribble"
-        app:layout_constraintEnd_toStartOf="@+id/linkedIn_text"
+        app:layout_constraintEnd_toEndOf="@+id/dribbble_image"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/dribbble_image"
         app:layout_constraintTop_toBottomOf="@+id/dribbble_image" />
 
     <TextView
@@ -241,9 +241,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/linkedin"
-        app:layout_constraintEnd_toStartOf="@+id/email_text"
+        app:layout_constraintEnd_toEndOf="@+id/linkedIn_image"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/dribbble_text"
+        app:layout_constraintStart_toStartOf="@+id/linkedIn_image"
         app:layout_constraintTop_toBottomOf="@+id/linkedIn_image" />
 
     <TextView
@@ -252,9 +252,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/e_mail"
-        app:layout_constraintEnd_toStartOf="@+id/whatsapp_text"
+        app:layout_constraintEnd_toEndOf="@+id/mail_image"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/linkedIn_text"
+        app:layout_constraintStart_toStartOf="@+id/mail_image"
         app:layout_constraintTop_toBottomOf="@+id/mail_image" />
 
     <TextView
@@ -263,9 +263,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/whatsapp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/whatsapp_image"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/email_text"
+        app:layout_constraintStart_toStartOf="@+id/whatsapp_image"
         app:layout_constraintTop_toBottomOf="@+id/whatsapp_image" />
 
     <ImageView
@@ -330,9 +330,9 @@
         android:layout_height="wrap_content"
         android:text="@string/google"
         app:layout_constraintBottom_toBottomOf="@+id/skype_text"
-        app:layout_constraintEnd_toStartOf="@+id/android_text"
+        app:layout_constraintEnd_toEndOf="@+id/google_image"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/skype_text" />
+        app:layout_constraintStart_toStartOf="@+id/google_image" />
 
     <TextView
         android:id="@+id/android_text"
@@ -341,9 +341,9 @@
         android:layout_height="wrap_content"
         android:text="@string/android"
         app:layout_constraintBottom_toBottomOf="@+id/google_text"
-        app:layout_constraintEnd_toStartOf="@+id/web_image"
+        app:layout_constraintEnd_toEndOf="@+id/androidBot_image"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/google_text" />
+        app:layout_constraintStart_toStartOf="@+id/androidBot_image" />
 
     <TextView
         android:id="@+id/web_text"
@@ -352,8 +352,8 @@
         android:layout_height="wrap_content"
         android:text="@string/website"
         app:layout_constraintBottom_toBottomOf="@+id/android_text"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/web_image"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/android_text" />
+        app:layout_constraintStart_toStartOf="@+id/web_image" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
