--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,9 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="text_Color">#282830</color>
     <color name="text_Color_two">#000000</color>
+    <color name="text_Color_three">#FFF7DA</color>
     <color name="background_Color">#FFFFFf</color>
     <color name="pic_background_Color">#FFC107</color>
+    <color name="buttonColour">#FFC107</color>
+
 </resources>
