crashing bug fixed

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -12,11 +12,12 @@
         android:id="@+id/imageView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="64dp"
         android:adjustViewBounds="false"
         android:cropToPadding="true"
         android:scaleType="center"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/signup" />
@@ -69,18 +70,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/phone_number_editText" />
 
-    <EditText
-        android:id="@+id/confirm_password_editText"
-        style="@style/edit_text"
-        android:layout_width="0dp"
-        android:layout_marginTop="24dp"
-        android:drawableStart="@drawable/lock"
-        android:hint="@string/confirm_password"
-        android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password_editText" />
-
     <Button
         android:id="@+id/signUp_button"
         android:layout_width="0dp"
@@ -93,7 +82,7 @@
         android:textColor="@color/text_Color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/confirm_password_editText" />
+        app:layout_constraintTop_toBottomOf="@+id/password_editText" />
 
     <TextView
         android:id="@+id/signInLink"
