--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -12,17 +12,19 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
+        android:cropToPadding="false"
         android:scaleType="fitStart"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/here" />
+        app:srcCompat="@drawable/look" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="24dp"
         android:src="@drawable/picture"
         app:civ_border_color="@color/pic_background_Color"
         app:civ_border_width="1dp"
@@ -35,7 +37,6 @@
         android:id="@+id/name_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:fontFamily="@font/poppins"
         android:text="@string/esther_jolugba"
         android:textAlignment="center"
@@ -66,7 +67,6 @@
         android:id="@+id/bio_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:fontFamily="@font/poppins_light"
         android:text="@string/bio"
         android:textAlignment="center"
@@ -77,7 +77,6 @@
         app:layout_constraintTop_toBottomOf="@+id/tech_used_text" />
 
 
-
     <include
         android:id="@+id/app_layout"
         layout="@layout/grid_layout"
@@ -86,14 +85,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/display_text" />
 
     <TextView
         android:id="@+id/display_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:clickable="true"
+        android:focusable="true"
         android:fontFamily="@font/poppins_light"
         android:maxLines="1"
         android:text="@string/textview"
@@ -101,7 +101,6 @@
         android:textColor="@color/text_Color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bio_text"
-        android:focusable="true" />
+        app:layout_constraintTop_toBottomOf="@+id/bio_text" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
